completed most of the project will work on menu.

--- a/CodingTracker.kmakai/App.config
+++ b/CodingTracker.kmakai/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="connectionString" value="Data Source=./data/Coding_Tracker.db" />
+		<add key="dbPath" value="./data/Coding_Tracker.db" />
 	</appSettings>
 </configuration>
