--- a/CodingTracker.kmakai/Properties/launchSettings.json
+++ b/CodingTracker.kmakai/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CodingTracker.kmakai": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\afkenji\\Desktop\\TheCsharpAcademy\\CodingTracker.kmakai"
+      "workingDirectory": "C:\\Users\\afkenji\\Desktop\\TheCsharpAcademy\\CodingTracker.kmakai\\CodingTracker.kmakai"
     }
   }
 }
